--- a/style.css
+++ b/style.css
@@ -31,7 +31,8 @@ div {
 .container {
     background-color: darkblue;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     padding: 1rem;
     flex-grow: 1;
 }
